# api.yaml
@@ -85,12 +85,21 @@ paths:
       description: Givent search parameters return relative sitting spots
       operationId: findSittingSpots
       parameters:
-        - name: location
+        - name: x
           in: query
-          description: General position of the search
           required: true
           schema:
-            $ref: '#/components/schemas/Area'
+            type: number
+        - name: y
+          in: query
+          required: true
+          schema:
+            type: number
+        - name: area
+          in: query
+          required: true
+          schema:
+            type: number
         - name: tags
           in: query
           description: Tags of the sitting spot
